--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,7 +7,7 @@ jobs:
     runs-on: ubuntu-22.04
 
     steps:
-      - name: Checkout
+      - name: Checkout code
         uses: actions/checkout@v3
 
       - name: Setup Node.js
@@ -15,8 +15,13 @@ jobs:
         with:
           node-version: 18
 
-      - name: Install dependencies
-        run: npm ci
+      - name: Install dependencies with retry
+        run: |
+          for i in {1..3}; do
+            npm ci && break
+            echo "npm ci failed, retrying in 10s ($i)..."
+            sleep 10
+          done
 
       - name: Verify Cypress installation
         run: npx cypress verify
@@ -24,4 +29,4 @@ jobs:
       - name: Run Cypress tests
         uses: cypress-io/github-action@v6
         with:
-          config-file: cypress.config.js  # ← garante que usa a nova config
+          config-file: cypress.config.js
